--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -9,7 +9,8 @@ $baseFont:'Cabin', sans-serif;
 $green: #9bc53d;
 $yellow: #fde74c;
 $red: #e55934;
-$orange: #fa7921;
+$orange: #ff8f44;
 $blue: #5bafe1;
 $lightgrey: #F9F3FD;
 $white: #FFFFFF;
+$darkgrey: rgb(24, 24, 24);
