--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -34,15 +34,15 @@ body{
 // }
 
 .userChoices{
-    background: ($blue);
-    color: black;
+    background: ($green);
+    color: ($darkgrey);
 }
 
 //RECIPE STYLES
 
 .recipes{
-    background: ($yellow);
-    color: black;
+    background: ($orange);
+    color: ($darkgrey);
 }
 
 
@@ -62,11 +62,21 @@ ul.recipePreviews{
     list-style: none;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
-    grid-gap: 1%;
     list-style-type: none;
     padding: 0;
         li{
             width: 100%;
+            // margin: 10px;
+                div.recipeTitle{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    max-height: 60px;
+                    min-height: 60px;
+                    text-align: center;
+                    background-color:($red);
+                    padding: 5%;
+                }
         }
 }
 
@@ -83,7 +93,7 @@ footer{
     width: 100%;
     margin-bottom: 0;
     padding: 0.5% 0;
-    background: ($blue);
+    background: ($red);
         p{
             display: inline-block;
             text-align: center;
